Update blog with entries from Paris to Munich

--- a/blog/2015012.md
+++ b/blog/2015012.md
@@ -19,7 +19,7 @@ On the outskirts of Saint Germain I stopped at a shopping centre for free WiFi a
 
 After the deluge had abated I set off again through the charming Saint Germain end Laye. Over the river again I ignored my Gps's claim of 45 miles and went along a pleasant riverside bike path. It eventually turned into quiet, one-way Road. I was going the wrong way but the signs said "sauf velos" so I was OK. It explained why my GPS wasn't happy. Back over the bridge I was hoping to get into Paris before the rush hour. I may have been helped by a public holiday as it was fairly quiet and much easier riding than London.
 
-I reached Port Maillot and then another mile to the Arc de Triomphe for an obligatory photo opportunity. Here I got a crepe with Nutella for two-thirds the price of one on Brighton pier.
+I reached Port Maillot and then another mile to the Arc de Triomphe for an obligatory photo opportunity. Here I got a proper French crepe with Nutella for two-thirds the price of one on Brighton pier.
 
 ![landscape](https://farm1.staticflickr.com/323/19451435975_8b15666b5d_z_d.jpg "Port Maillot")
 
