--- a/blog/2015038.md
+++ b/blog/2015038.md
@@ -25,16 +25,16 @@ Unfortunately I had to leave the EV6 on a road route to go to Branjin Vrh which 
 
 ![landscape](https://pbs.twimg.com/media/CHOqNnBUUAEQjwu.jpg:large "A Croatian's home is their castle. Literally. With crenellations on top.")
 
-I rode over the bridge, through the old town, heading for the centre. I was earlier than normal and wanted to find the Tourist Information Office to ask about campsites. At the main square I saw the cathedral and then the familiar "i". Inside I said hello and the lady at the desk told me there was no camping but there was a hostel. Then she said I'd be better in a different place that was about the same price but I wouldn't have to take my bike upstairs. She rang ahead an booked me in. I then started telling her about the reason for my trip and that Thomas Stevens had been here for two days because it had rained. This caught the attention of her colleague, Mislav, who asked if he could photograph me for their Facebook group. We chatted some more and then insisted that I should come back to them tomorrow if I had any questions. With that friendly encounter I headed off to the room.
+I rode over the bridge, through the old town, heading for the centre. I was earlier than normal and wanted to find the Tourist Information Office to ask about campsites. At the main square I saw the cathedral and then the familiar "i". Inside I said hello and the lady at the desk told me there was no camping but there was a hostel. Then she said I'd be better in a different place that was about the same price but I wouldn't have to take my bike upstairs (that didn't turn out to be correct). She rang ahead and booked me in. I then started telling her about the reason for my trip and that Thomas Stevens had been here for two days because it had rained. This caught the attention of her colleague, Mislav, who asked if he could photograph me for their Facebook group. We chatted some more and they insisted that I should come back to them tomorrow if I had any questions. With that friendly encounter I headed off to the room.
 
 ![landscape](https://farm1.staticflickr.com/280/19265893900_69e10c70ac_z_d.jpg "Osijek Tourist Information Office")
 
-At the hotel I was met by another friendly lady who didn't have many words of English but the conversation she'd already been briefed by phone so that helped. She registered me in a huge book that looked as though it may have been the register since Stevens' day.
+At the hotel I was met by another friendly lady who didn't have many words of English but she'd already been briefed by phone so that helped. She registered me in a huge book that looked as though it may have been the register since Stevens' day.
 
 ![landscape](https://farm1.staticflickr.com/556/19265919680_1350e3bc3c_z_d.jpg "Checking in")
 
-The room was on the top floor and was sweltering. I had a shower to cool down then went to ask about WiFi. On the way back to the room I saw a guy with a bike. He was Michael and had cycled from Munich throught he Alps. He knew about me already because the Tourist Information Office had been surprised to get a second cyclist and sent him in my direction. After he had a shower we wanderd to the main square where we had the local Osijeko beer that Mislav had recommended to me. We exchanged stoies about our trips and PhD/postdoc life as he turned out to be a PhD physicist. Michael was heading on to Belgrade on a limited timescale as he was going to have a holiday with his girlfriend. We arranged to meet for breakfast.
+The room was on the top floor and was sweltering. I had a shower to cool down then went to ask about WiFi. On the way back to the room I saw a guy with a bike. He was Michael and had cycled from Munich throught he Alps. He knew about me already! Not because I was famous but because he'd also been to the Tourist Information Office. They had been surprised to get a second cyclist and sent him in my direction. After he had a shower we wanderd to the main square where we had the local Osijeko beer that Mislav had recommended to me. We exchanged stories about our trips. He turned out to be a PhD physicist so we also talked about the difficulties of PhD/postdoc life. Michael was heading on to Belgrade on a limited timescale as he was going to have a holiday with his girlfriend. We arranged to meet for breakfast.
 
 ![portrait](https://farm1.staticflickr.com/455/19427417466_03d8d97678_z_d.jpg "Michael from Munich")
 
-Back at the hotel the lady in charge was very excited about something. Shee took me to her desk and showed me that she had a message from Mislav. She rang him back for me on her mobile. Apparently the local newspaper wanted to interview me and Mislav wanted to know if I could go back to them tomorrow. I said yes.
+Back at the hotel the lady in charge was very excited about something. She took me to her desk and showed me a message from Mislav. She rang him back for me on her mobile. Apparently the local newspaper wanted to interview me. Mislav wanted to know if I could go back to them tomorrow. I said yes.
