--- a/blog/2015020.md
+++ b/blog/2015020.md
@@ -14,7 +14,7 @@ As [Stevens says](http://www.strudel.org.uk/blog/stevens/000151.shtml#blog), Obe
 
 Up to Oppenau I rode and here I went a little wrong. I'd not spotted that Stevens went to "Petersthal" or Bad Petersthal as it is today. On a tourist information board I saw a route towards Freudenstadt that seemed to be indicated as suitable for bicycles. I took it. I should have been worried at the bottom by the sign warning of 20% gradients but I carried on. The road wound its way up the side of a huge hill into the Black Forest and went on for miles in what felt like a vertical direction. It was the biggest climb of the trip and far harder than anything I'd been up in the Sierra Nevadas or the Rockies. Why had Stevens not mentioned this? It. Just. Kept. Going.
 
-I thought I might be nearing the top and stopped at a little spring by the side of the road to re-fill my bottles. An older couple were already filling their own bottles and they started to talk to me in German. I apologised using German I'd picked up from Stevens' book saying "Sorry. Ich bin ein Englander". They immediately switched to perfect English and congratulated me on getting this far up the hill. They'd passed me in their car a little earlier and were wondering where I was going. They were Christian and Evelin who were retired university professors from T&uuml;bingen and were just out for a ride. They filled my water bottles for me and were genuinely interested in my trip as I showed them the route on my phone. They said that I was welcome to stay at their house in Tubingen that night! How wonderful. I am so grateful for the kindness of strangers. It restores faith in the basic decency of humanity that the 24-hour news-cycle tends to obscure.
+I thought I might be nearing the top and stopped at a little spring by the side of the road to re-fill my bottles. An older couple were already filling their own bottles and they started to talk to me in German. I apologised using German I'd picked up from Stevens' book saying "Sorry. Ich bin ein Englander". They immediately switched to perfect English and congratulated me on getting this far up the hill. They'd passed me in their car a little earlier and were wondering where I was going. They were Christian and Evelin who were retired university professors from T&uuml;bingen and were just out for a ride. They filled my water bottles for me and were genuinely interested in my trip as I showed them the route on my phone. They said that I was welcome to stay at their house in Tubingen that night! How wonderful. I am so grateful for the kindness of strangers. It restores faith in the basic decency of humanity.
 
 ![landscape](https://farm8.staticflickr.com/7670/17866803349_018435676c.jpg "The marvellous Christian and Evelin")
 
