--- a/blog/2015022.md
+++ b/blog/2015022.md
@@ -4,7 +4,7 @@ Date:	2015-05-240T19:53:00+0200
 Distance:	69.5 miles
 ---
 
-Around mid-day I rolled into Ulm. A few days before I'm been sent a message from an old school friend saying that his mum insisted I should go up the cathedral tower in Ulm. Having gone up the cathedral tower in Strasbourg this was now becoming a tradition. I paid my money and ascended the 747 steps to the top - the very top. I was a little surprised that the final section appeared to have nobody supervising it. The views were stunning. I used the vantage point to get an idea of how hilly the route ahead might be. As I'd now hit the Danube I realised that it would be fairly flat for a while.
+Around mid-day I rolled into Ulm. A few days before I'd been sent a message from an old school friend saying that his mum insisted I should climb up the cathedral tower in Ulm. Having gone up the cathedral tower in Strasbourg this was now becoming a tradition. I paid my money and ascended the 747 steps to the top - the very top. I was a little surprised that the final section appeared to have nobody supervising it. The views were stunning. I used the vantage point to get an idea of how hilly the route ahead might be. As I'd now hit the Danube I realised that it would be fairly flat for a while.
 
 ![portrait](https://farm8.staticflickr.com/7748/17865455258_2babba4003.jpg "Ulm cathedral")
 
