--- a/blog/2015021.md
+++ b/blog/2015021.md
@@ -4,7 +4,7 @@ Date:	2015-05-23T22:00:00+0200
 Distance:	55.3 miles
 ---
 
-I awoke to a fantastic breakfast provide by Evelin to fuel me for the day ahead. I noted with a smile that Stevens had also had his breakfast in T&uuml;bingen; so I wasn't in a rush and enjoyed the company of my hosts until after 10am when I thought I really should get going.
+I awoke to a fantastic breakfast provided by Evelin to fuel me for the day ahead. I noted with a smile that Stevens had also had his breakfast in T&uuml;bingen; so I wasn't in a rush and enjoyed the company of my hosts until after 10am when I thought I really should get going.
 
 Down the hill and out of T&uuml;bingen I rode. My aim was Blaubeuren but Stevens had little to say about the route except that it was "thirty-five kilometres of hilly country". It certainly was and had another 20% gradient section where I had to walk. My other knee was starting to give me trouble and my French pomade saw more use.
 
