Update European-leg datestamps

--- a/blog/2015005.md
+++ b/blog/2015005.md
@@ -1,6 +1,6 @@
 ---
 Title:	Coventry to Fenny Stratford
-Date:	2015-05-05T219:00:00+0100
+Date:	2015-05-05T219:00:00+BST
 Distance:	56.6 miles
 ---
 
