--- a/blog/2015013.md
+++ b/blog/2015013.md
@@ -1,6 +1,6 @@
 ---
 Title:	Missing days
-Date:	2015-05-150T22:22:00+0200
+Date:	2015-05-150T22:22:00+CEDT
 ---
 
 __INTERMISSION: I'd been writing blog posts about the days from Paris on my phone and hadn't got around to posting them. Unfortunately, my phone screen broke in Alt&ouml;tting, Germany which meant I couldn't access them. I left a gap here for them. Now that I'm back home, and my phone is fixed, normal service can be resumed.__
