--- a/blog/2015014.md
+++ b/blog/2015014.md
@@ -1,6 +1,6 @@
 ---
 Title:	Resting in Paris
-Date:	2015-05-150T22:22:00+0200
+Date:	2015-05-150T22:22:00+CEDT
 ---
 
 Today was a rest day for knee recovery. I'd have slept longer this morning but a gentleman sharing the dorm room decided to clatter about for an hour and a half getting ready.
