--- a/blog/2015016.md
+++ b/blog/2015016.md
@@ -1,6 +1,6 @@
 ---
 Title:	S&eacute;zanne to Bar-le-duc
-Date:	2015-05-180T21:00:00+0200
+Date:	2015-05-180T21:00:00+CEDT
 Distance:	75.5 miles
 ---
 
