Fix broken images

--- a/blog/2015003.md
+++ b/blog/2015003.md
@@ -10,9 +10,9 @@ The museum was hidden away in a courtyard and was run by a man who had cycled fr
 
 ![portrait](https://farm1.staticflickr.com/349/19444247972_275086e2bf_z_d.jpg "On the fake penny farthing")
 
-![portrait](https://farm9.staticflickr.com/8830/17183204270_b2da94aa20.jpg)
+![portrait](https://farm9.staticflickr.com/8830/17183204270_b2da94aa20.jpg "Penny Farthing")
 
-![portrait](https://farm9.staticflickr.com/8765/17163318547_6ce60075eb.jpg)
+![portrait](https://farm9.staticflickr.com/8765/17163318547_6ce60075eb.jpg "With Peter at the Penny Farthing museum")
 
 At Knutsford I said goodbye to Peter and continued on over Cheshire lanes to Jodrell Bank home of the mighty Lovell Telescope. I'd spent a few years working there so I was on lanes I knew. I stopped at the new Visitor Centre to see it and have a nice, relaxing, cup of tea. With it being a Sunday none of the people I knew were around and some had retired but I had a good chat with Jill and Soliyta. Over tea I also got talking to two cyclists - Chris and Owen - who were organising a charity ride from Edinburgh to London in July.
 
@@ -30,7 +30,7 @@ Heading on from Jodrell, out beyond the Red Lion at Swettenham, I stopped for a 
 
 ![portrait](https://farm1.staticflickr.com/311/19454896511_a01afcb542_z_d.jpg "David")
 
-![landscape](https://farm9.staticflickr.com/8690/17163330147_e1e7e1680c.jpg)
+![landscape](https://farm9.staticflickr.com/8690/17163330147_e1e7e1680c.jpg "Cheshire countryside")
 
 I pressed on beyond the area I knew to Congleton where I picked up the lovely Biddulph Valley Way cycle trail. It slowly ascended upwards along a wooded track but with occasional views of lambs lazing in the sunshine. The weather had been mixed this morning but had stayed dry this afternoon.
 
