Adding entries to Belgrade

--- a/blog/2015039.md
+++ b/blog/2015039.md
@@ -7,7 +7,7 @@ At breakfast I chatted with Michael. He seemed to have been inspired by my trip,
 
 ![portrait](https://farm1.staticflickr.com/559/18830998774_dbe6bc0185_z_d.jpg "Michael leaving")
 
-I arrived at the Tourist Information Office just after 11 am having misjudged how many traffic lights there were between the hotel and it. I was met by Mrs Vesna Latinovic - a reporter from the local newspaper. The paper is a direct descendant of __Der Drau__ whose assistant editor had met Thomas Stevens so this was very pleasing for everyone. After the interview and having my photo taken by the official photographer, Mislav took me for a "cyclist beer" in the main square. It actually turned out to be a shandy and was very nice. Mislav had been reading up on Stevens and had been excited to discover that after his bike ride around the world he went looking for the famous explorer Stanley in Africa. It turns out Mislav is related to the most trusted assistant of Stanley. What a coincidence! As we were sat talking about Croatia and Osijek, Mrs Latinovic came back. She had aquired some stickers for me! I immediately put one on my bike.
+I arrived at the Tourist Information Office just after 11 am having misjudged how many traffic lights there were between the hotel and it. I was met by Mrs Vesna Latinovi&#263; - a reporter from the local newspaper. The paper is a direct descendant of __Der Drau__ whose assistant editor had met Thomas Stevens so this was very pleasing for everyone. After the interview and having my photo taken by the official photographer, Mislav took me for a "cyclist beer" in the main square. It actually turned out to be a shandy and was very nice. Mislav had been reading up on Stevens and had been excited to discover that after his bike ride around the world he went looking for the famous explorer Stanley in Africa. It turns out Mislav is related to the most trusted assistant of Stanley. What a coincidence! As we were sat talking about Croatia and Osijek, Mrs Latinovic came back. She had aquired some stickers for me! I immediately put one on my bike.
 
 ![portrait](https://farm4.staticflickr.com/3886/19267355699_bfdbc59a5c_z_d.jpg "Mislav")
 
