--- a/blog/2015038.md
+++ b/blog/2015038.md
@@ -14,15 +14,15 @@ I crossed the river on the relatively busy 7.45 ferry to Dunaszekcs&#337;. It se
 
 ![portrait](https://farm1.staticflickr.com/391/19427329036_9f72431894_z_d.jpg "Cycle lane")
 
-At Mov&aacute;cs I enjoyed an ice cream and then bumped into lots of older British people here on a Saga cruise holiday. I chatted to a few and had one lady shout "Yorkshire Post" at me as I cycled out of town (I assume the Grand Depart Yorkshire top must have looked like the Yorkshire Post masthead to her).
+At Mov&aacute;cs I enjoyed an ice cream and then bumped into lots of older British people here on a Saga cruise holiday. I chatted to a few and had one lady shout "[Yorkshire Post](http://www.yorkshirepost.co.uk/)" at me as I cycled out of town (I assume the [Grand D&eacute;part Yorkshire top](http://wtyshop.com/p/yorkshire-grand-depart-kids-cycle-jersey-567) must have looked like the Yorkshire Post masthead to her).
 
-![portrait](https://farm1.staticflickr.com/505/19427343316_f3f6680b81_z_d.jpg "Mov&aacute;s")
+![portrait](https://farm1.staticflickr.com/505/19427343316_f3f6680b81_z_d.jpg "Mov&aacute;cs")
 
-I followed the EV6 to the border where I met my first passport control since Dieppe. The border guards were as serious and officious as they are almost everywhere but only looked at my passport for a few seconds before waving me through. K&ouml;sz&ouml;n&ouml;m Hungary. I was now in Croatia. The road signs were now yellow. 
+I followed the [EV6](http://www.eurovelo.com/en/eurovelos/eurovelo-6) to the border where I met my first passport control since Dieppe. The border guards were as serious and officious as they are almost everywhere but only looked at my passport for a few seconds before waving me through. K&ouml;sz&ouml;n&ouml;m Hungary. I was now in Croatia. The road signs were yellow. 
 
 ![landscape](https://farm1.staticflickr.com/477/18830952284_b9688013f1_z_d.jpg "Croatia")
 
-Unfortunately I had to leave the EV6 on a road route to go to Branjin Vrh which I still can't pronounce. After a rather busy road I headed to "the Duke's vineyard" - Kne&#382;evi Vinogradi - and then south along the EV6 on-road route to Osijek.
+Unfortunately I had to leave the EV6 on a road route to go to Branjin Vrh which I still can't pronounce. After a rather busy road I headed to "the Duke's vineyard" - Kne&#382;evi Vinogradi - and then south along the EV6-on-road-route to [Osijek](http://www.osijek.hr/en/).
 
 ![landscape](https://pbs.twimg.com/media/CHOqNnBUUAEQjwu.jpg:large "A Croatian's home is their castle. Literally. With crenellations on top.")
 
@@ -34,7 +34,7 @@ At the hotel I was met by another friendly lady who didn't have many words of En
 
 ![landscape](https://farm1.staticflickr.com/556/19265919680_1350e3bc3c_z_d.jpg "Checking in")
 
-The room was on the top floor and was sweltering. I had a shower to cool down then went to ask about WiFi. On the way back to the room I saw a guy with a bike. He was Michael and had cycled from Munich throught he Alps. He knew about me already! Not because I was famous but because he'd also been to the Tourist Information Office. They had been surprised to get a second cyclist and sent him in my direction. After he had a shower we wanderd to the main square where we had the local Osijeko beer that Mislav had recommended to me. We exchanged stories about our trips. He turned out to be a PhD physicist so we also talked about the difficulties of PhD/postdoc life. Michael was heading on to Belgrade on a limited timescale as he was going to have a holiday with his girlfriend. We arranged to meet for breakfast.
+The room was on the top floor and was sweltering. I had a shower to cool down then went to ask about WiFi. On the way back to the room I saw a guy with a bike. He was Michael and had cycled from Munich throught he Alps. He knew about me already! Not because I was famous but because he'd also been to the Tourist Information Office. They had been surprised to get a second cyclist and sent him in my direction. After he had a shower we wanderd to the main square where we had the local [Osje&#269;ko beer](http://portfolios.risd.edu/gallery/Osjecko-pivo-Black-Radler-Beer/10691073) that Mislav had recommended to me. We exchanged stories about our trips. Michael turned out to be a PhD physicist so we also talked about the difficulties of PhD/postdoc life. Michael was heading on to Belgrade on a limited timescale as he was going to have a holiday with his girlfriend. We arranged to meet for breakfast.
 
 ![portrait](https://farm1.staticflickr.com/455/19427417466_03d8d97678_z_d.jpg "Michael from Munich")
 
