Add posts into Serbia

--- a/blog/0007.md
+++ b/blog/0007.md
@@ -1,7 +1,7 @@
 ---
 Title:	To Fairfield
 Date:	2014-04-23T22:06+PDT
-Distance:	56.9 miles
+#Distance:	56.9 miles
 ---
 
 After leaving Oakland Jack London ferry terminal I headed to a hardware store that Maryann told me about so I could buy a replacement bungee cord for my top bag; I'd lost mine in the youth hostel somewhere and hadn't been able to find it that morning. I was able to buy three cords so I have two spares in case I lose them again.
