--- a/blog/2015043.md
+++ b/blog/2015043.md
@@ -3,11 +3,11 @@ Title:	A day in Belgrade
 Date:	2015-06-16T22:00:00+CEDT
 ---
 
-![portrait](https://farm1.staticflickr.com/551/19447628942_0c666c1e5c.jpg "Jakob")
+![portrait](https://farm1.staticflickr.com/551/19447628942_0c666c1e5c.jpg "Jakob with his full set of Ortleib panniers heading to China")
 
 ![landscape](https://farm1.staticflickr.com/310/18831456234_d97336b588.jpg "Belgrade free walking tour")
 
-![landscape](https://farm1.staticflickr.com/320/19267818259_f5d332038d.jpg "Directions")
+![landscape](https://farm1.staticflickr.com/320/19267818259_f5d332038d.jpg "Directions to bohemian quarters and the Moon")
 
 ![landscape](https://farm1.staticflickr.com/291/19266399630_39eed4144d.jpg "Little red Yugo")
 
