--- a/blog/2015044.md
+++ b/blog/2015044.md
@@ -1,6 +1,7 @@
 ---
 Title:	The end of my journey along the Danube
 Date:	2015-06-17T21:00:00+CEDT
+Distance:	41.0 miles
 ---
 
 ![landscape](https://farm1.staticflickr.com/380/19447721202_f59a4ca88c.jpg "Serbia")
