Update with day in Belgrade

--- a/blog/2015043.md
+++ b/blog/2015043.md
@@ -3,24 +3,40 @@ Title:	A day in Belgrade
 Date:	2015-06-16T22:00:00+CEDT
 ---
 
+In the morning Aurelie and I said goodbye to Jakob wishing him well on his epic ride to China and hoping he made it before winter set in. He told me that it wasn't possible to cycle through Pakistan at the moment - more problems if I was to contemplate continuing Stevens' trip beyond Istanbul.
+
 ![portrait](https://farm1.staticflickr.com/551/19447628942_0c666c1e5c.jpg "Jakob with his full set of Ortleib panniers heading to China")
+
+After saying goodbye, Aurelie and I headed over to the main square for a free walking tour of Belgrade. Our host showed us the still-not-reopened national museum and dismissed the reopening countdown clock as a work of fiction. We walked back over to the street our hostel was on which was the bohemian quarter. A fingerpost pointed to other bohemian quarters around the world (e.g. Montmartre) but, amusingly, also to the Moon!
 
 ![landscape](https://farm1.staticflickr.com/310/18831456234_d97336b588.jpg "Belgrade free walking tour")
 
 ![landscape](https://farm1.staticflickr.com/320/19267818259_f5d332038d.jpg "Directions to bohemian quarters and the Moon")
 
+On the way across to the castle/fortress I spotted a little red Yugo just like the one my sister had when I was a kid. I have happy memories of long drives to Scotland in one of those.
+
 ![landscape](https://farm1.staticflickr.com/291/19266399630_39eed4144d.jpg "Little red Yugo")
 
-![landscape](https://farm1.staticflickr.com/508/18833359823_306bf8277d.jpg "Chess in the park")
+![landscape](https://farm1.staticflickr.com/508/18833359823_306bf8277d.jpg "Chess in the park at the castle/fortress")
 
 ![portrait](https://farm1.staticflickr.com/496/19266425200_f13897d2ee.jpg "Kristina - walking tour guide")
 
 ![landscape](https://farm1.staticflickr.com/346/19447671612_df68ff63ec.jpg "Red umbrellas")
 
-![portrait](https://farm1.staticflickr.com/457/19427928376_44627de651.jpg "Communist-era sticks")
+In the afternoon we joined a "Communist tour" of Belgrade which included a bus trip to the [House of Flowers](https://en.wikipedia.org/wiki/House_of_Flowers_%28mausoleum%29) - a memorial and tomb to Tito. It was fascinating to hear a Serbian perspective on their 21st Century history. I only really knew little bits of this before my trip as I'd never quite had the geographic knowledge or context to really remember it very well growing up. I learned that by the outbreak of World War II, Yugoslavia was already fighting two wars and this added another on top. After the war Yugoslavia had an interesting position as it was aligned with the Soviet Union but not part of it (by treaty at the demand of Tito). The result was that it spent the cold war sat between the West and the Soviet Union not really in either. Yugoslavian citizens were able to freely visit both - making it unique.
+
+Many older Serbians seem to fondly remember Tito despite the forced labour camps and disappearing that happened. In today's climate of higher unemployment and difficult conditions set by the EU for membership, you could see that people would hark back to a time of full employment and a bigger, more important, country. Civil war and NATO bombings were still fresh in the minds of young Serbians.
+
+Our guide was Serbian and tried their best to stay away from contentious issues that might upset Croatians, Bosnians and others from countries that had fought to separate themselves from Serbia. A couple of tours is certainly not enough to understand the complex history. Although far from the same, I felt the devolution debate in the UK at least gave me a little insight into the divisions, dominance, and resentment between different parts of a larger union.
+
+![portrait](https://farm1.staticflickr.com/457/19427928376_44627de651.jpg "Communist-era 'Relays of Youth' given as presents to Tito after being used a bit like Olympic torches.")
 
 ![landscape](https://farm1.staticflickr.com/553/18831515524_dcd388bdc0.jpg "Nato bombing in Belgrade")
 
+Near the end of the tour we stopped near some government buildings and our guide seemed a little uncomfortable. Perhaps they were being careful what they said in case it was deemed critical in any way.
+
 ![landscape](https://farm1.staticflickr.com/351/19266452330_efd678a699.jpg "Serbian Parliament")
+
+In the evening Aurelie got talking to a guy selling shades for candles in the street outside. They were made by making lots of small holes in a sheet of metal and then curving it around into a cylinder. She wanted to buy one as a present but wasn't sure which to get. An older, slightly drunk, man came over and started talking to her. He seemed to be the boss of the guy who'd actually made the candle shades. Just in case the drunk guy got abusive I hung around - I felt it'd be better if there were two of us. While there I had a nice chat with the artist who'd made the candle shades - Nikola. He was from Novi Sad but there was little work so he'd moved to Belgrade. Life seemed tough with incredibly expensive utility bills and rent. Weirdly, Nikola knew of Huddersfield Town football club (my nephew supports them) as he was a big football fan. He was an intelligent, enthusiastic, interesting guy who also had a touch of melancholy. I hope he manages to realise his dreams one day.
 
 ![portrait](https://farm1.staticflickr.com/379/19427952396_8a357aa644.jpg "Nikola")
