Update to Istanbul

--- a/blog/2015044.md
+++ b/blog/2015044.md
@@ -4,14 +4,24 @@ Date:	2015-06-17T21:00:00+CEDT
 Distance:	41.0 miles
 ---
 
+On the Wednesday morning Aurlie and I packed up our bikes and set off on different routes from Belgrade. Aurelie was heading to the [EuroVelo6](http://www.eurovelo.com/en/eurovelos/eurovelo-6) on the flat side of the Danube and I was sticking to Stevens' more hilly route on the south/west side. We'd agreed that we'd meet up again at the Guest house Dunavski Pli&cacute;ak who had tweeted me some time back.
+
+The road out of Belgrade was long, straight and busy. Not the most pleasant cycling. Eventually it made way to more countryside and the traffic dropped off. I stopped at a small outdoor market and used the very few words of Serbian I had along with hand guestures to buy a big bag of cherries for a very cheap price. The two ladies at the market stall knew that I couldn't speak the language but smiled encouragement and found the whole situation of pantomime funny. So did I. I thanked them in Serbian and waved goodbye before heading across hilly country.
+
 ![landscape](https://farm1.staticflickr.com/380/19447721202_f59a4ca88c.jpg "Serbia")
 
 ![landscape](https://farm4.staticflickr.com/3887/19266473408_9dfe92424d.jpg "Serbian vinyard")
+
+In Smederevo I had a rest on a bench in the centre and a local man came up and asked me where I'd cycled from. He was very impressed and wished me well on the rest of my journey. I headed out of town and across the Danube on a big, daunting bridge. Over the bridge I was able to get off the road and onto the EuroVelo6 route that ran along the side of the river towards Kovin. 
+
+After Kovin the route continues along the top of a dyke for a few miles before I caught sight of the little sign for the Dunavski Pli&cacute;ak guest house. I was welcomed by Dragana - the owner - and a little later we were joined by Ale (short for Alessandro). Dragana's dad ran the bike shop in Kovin and Ales was from Italy so we had lots of interesting conversation. They'd set this up for the summer months and planned to go up to Novi Sad during the winter as Dragana had work at the university. Being one of the few bike-friendly guest houses along this part of the EuroVelo6 means they get to meet a good fraction of those cycling it. They'd met far more cyclists than I had in the past few days. Strangely, cycling along the route means you are unlikely to meet other cyclists as everyone is pretty much going the same direction (east). Add to that the fact I was often off the modern route to follow Thomas Stevens and my chances were even slimmer.
+
+A little later we were joined by Aurelie and we both sat and caught up on the day's adventures next to the river whilst Dragana's dad & friends worked on fixing their little pier which had been damaged when the river froze in the winter. Dragana & Ale made us a lovely dinner and the four of us chatted into the night.
 
 ![landscape](https://farm1.staticflickr.com/264/18833466263_e40e76cb39.jpg "Danube and sky")
 
 ![portrait](https://farm4.staticflickr.com/3879/19266518548_dc6e3ef4fb.jpg "Pier")
 
-![landscape](https://farm4.staticflickr.com/3786/19447779492_654e2e0e7d.jpg "Dunavski Plicak")
+![landscape](https://farm4.staticflickr.com/3786/19447779492_654e2e0e7d.jpg "Dunavski Pli&cacute;ak")
 
-![portrait](https://farm4.staticflickr.com/3767/19266525950_e9926bff6a.jpg "Ale")
+![portrait](https://farm4.staticflickr.com/3767/19266525950_e9926bff6a.jpg "Ale with one of their dogs")
