--- a/blog/2015043.md
+++ b/blog/2015043.md
@@ -37,6 +37,6 @@ Near the end of the tour we stopped near some government buildings and our guide
 
 ![landscape](https://farm1.staticflickr.com/351/19266452330_efd678a699.jpg "Serbian Parliament")
 
-In the evening Aurelie got talking to a guy selling shades for candles in the street outside. They were made by making lots of small holes in a sheet of metal and then curving it around into a cylinder. She wanted to buy one as a present but wasn't sure which to get. An older, slightly drunk, man came over and started talking to her. He seemed to be the boss of the guy who'd actually made the candle shades. Just in case the drunk guy got abusive I hung around - I felt it'd be better if there were two of us. While there I had a nice chat with the artist who'd made the candle shades - Nikola. He was from Novi Sad but there was little work so he'd moved to Belgrade. Life seemed tough with incredibly expensive utility bills and rent. Weirdly, Nikola knew of Huddersfield Town football club (my nephew supports them) as he was a big football fan. He was an intelligent, enthusiastic, interesting guy who also had a touch of melancholy. I hope he manages to realise his dreams one day.
+In the evening Aurelie got talking to a guy selling shades for candles in the street outside. They were made by making lots of small holes in a sheet of metal and then curving it around into a cylinder. She wanted to buy one as a present but wasn't sure which to get. An older, slightly drunk, man came over and started talking to her. He seemed to be the boss of the guy who'd actually made the candle shades. Just in case the drunk guy got abusive I hung around - I felt it'd be better if there were two of us. While there I had a nice chat with the artist who'd made the candle shades - Nikola. He was from Ni&saron; but there was little work so he'd moved to Belgrade. Life seemed tough with incredibly expensive utility bills and rent. Weirdly, Nikola knew of Huddersfield Town football club (my nephew supports them) as he was a big football fan. He was an intelligent, enthusiastic, interesting guy who also had a touch of melancholy. I hope he manages to realise his dreams one day.
 
 ![portrait](https://farm1.staticflickr.com/379/19427952396_8a357aa644.jpg "Nikola")
