--- a/blog/2015058.md
+++ b/blog/2015058.md
@@ -5,7 +5,7 @@ Date:	2015-07-01T15:00:00+CEDT
 
 In the morning I left the hostel and set off to find the Hagia Sofia. My first knowledge of it was as a wonder of the world in the computer game Civilization, and I'd been looking forward to finally seeing it in person.
 
-In the tourist area I had two Brits and then a nice lady from Melbourne ask me if I was from Yorkshire; it was written in big letters on my top. I took the opportunity to visit one of the tourist gift shops near the Blue Mosque to find a sticker for my bike. Through Serbia and Bulgaria it had been extremely difficult to find stickers but here I managed to find an entire sheet thanks to the shop keeper even if he was confused as to why I wanted to put them on my bike. As I was adding the stickers, the lady from Melbourne came back over to talk to me and then some Italians wanted their picture with me. I was becoming a tourist attraction in my own right.
+In the tourist area, two Brits and then a nice lady from Melbourne asked me if I was from Yorkshire; it was written in big letters on my Grand D&eacute;part 2014 top. I took the opportunity to visit one of the gift shops near the Blue Mosque to find a sticker for my bike. Through Serbia and Bulgaria it had been extremely difficult to find stickers but here I managed to find an entire sheet thanks to the shop keeper even if he was confused as to why I wanted to put them on my bike. As I was adding the stickers, the lady from Melbourne came back over to talk to me and then some Italians wanted their picture with me. The crowd caused more people to come over to see what was going on. I was becoming a bit of a tourist attraction in my own right!
 
 ![portrait](https://farm1.staticflickr.com/544/19273490260_ba2d43f751.jpg "Lady from Melbourne")
 
@@ -13,7 +13,7 @@ In the tourist area I had two Brits and then a nice lady from Melbourne ask me i
 
 ![landscape](https://farm4.staticflickr.com/3775/19274984869_23e384e30f.jpg "The Blue Mosque")
 
-I pushed my bike over towards the Hagia Sofia. I wasn't in a rush. I'd originally set out to cross the US and had extended that to follow Stevens across Europe. I was finally here. I had cycled aross two continents and, as someone on Twitter pointed out, an entire religion. I had a content smile on my face. It has been fun following you Thomas. Enjoy the rest of your ride to Japan (in 1885-6). This is where my journey ends.
+I pushed my bike over towards the Hagia Sofia. I wasn't in a rush. I'd originally set with the intention of crossing the US and, whilst coming down from the Rockies had decided to follow Stevens across Europe too. I was finally here. I had cycled aross two continents and, as someone on Twitter pointed out, an entire religion. I had a content smile on my face. It has been fun following you Thomas. Enjoy the rest of your ride to Japan (1885-6). This is where _my_ journey ends.
 
 ![landscape](https://farm1.staticflickr.com/551/19461070835_5bde10af3a.jpg "The Hagia Sofia")
 
