--- a/blog/2015055.md
+++ b/blog/2015055.md
@@ -4,15 +4,15 @@ Date:	2015-06-28T20:00:00+CEDT
 Distance:	63.2 miles
 ---
 
-Aside from briefly being woken by the musical call-to-prayer at 3.30am, I slept about 12 hours.
+Aside from briefly being woken by the musical call-to-prayer at 3.30am, I slept about 12 hours. I packed and said goodbye to the "campingplatz f&uuml;hrer". As her toilet blocks had no toilet paper I was now on the hunt for a toilet. Thankfully, the D100 has lots and lots of petrol stations on it so I managed to relieve myself.
 
-200 km to go. Not sure if it is quiet due to Sunday or Ramadan.
+There was around 200 km to go. The D100 was fairly quiet either because it is a Sunday morning or because it is Ramadan.
 
 ![landscape](https://pbs.twimg.com/media/CIkpk9YWoAAM-KK.jpg:large "D100 road in Turkey")
 
-So far, in almost every shop I've been in the owner has followed me around. It is slightly disconcerting.
+So far, in almost every petrol station or shop I've been in the owner has followed me around. It is slightly disconcerting.
 
-I stopped at what looked like a little cafe with some men outside drinking tea (chai). I bought some then the men bought me a second. We shared almost no language. There were pantomimic gestures, a few words of German, and I learnt the word for flat in Turkish: d&uuml;z. Brill!
+I came off the D100 into a little town. I stopped at what looked like a little cafe with some men outside drinking tea (chai). I say a shop but it could have been a little community centre. I motioned to ask if I could buy some tea. Between three of the men they worked out what I was asking and I was bought some. They told me the price in Turkish. I'm so glad my Turkish friend Selin had taught me how to count to 10 in Turkish when I was at university. We shared almost no language. There were pantomimic gestures, a few words of German, some use of Google Translate, and I learnt the word for flat in Turkish: d&uuml;z. Brill! They were lovely and I thanked them before heading back on my way. I'd only gone a little way down the street when I saw an open bakery. The bakers were in the middle of making loaves and I was able to buy one for lunch. It was still warm and very tasty.
 
 ![landscape](https://farm1.staticflickr.com/331/19454353622_09a22d277c.jpg "Chai in Havsa.")
 
@@ -24,16 +24,14 @@ I stopped at what looked like a little cafe with some men outside drinking tea (
 
 ![landscape](https://farm1.staticflickr.com/436/18838213944_418a51db66.jpg "Western Turkey is starting to feel like Western Iowa but with less corn and a better hard shoulder")
 
-I decided to cycle on ahead of Thomas Steven. I have better roads and want to make the most of the relative quiet today.
+I decided to cycle on ahead of Thomas Steven. I have better roads and want to make the most of the relative quiet today. It may not be this quiet tomorrow.
 
-I think the rain clouds are surrounding me.
+As the afternoon went on I got surrounded by rain clouds and there was lightning behind me. I got reminded of cycling away from storms on the great plains of the US.
 
 ![landscape](https://farm1.staticflickr.com/277/19465002721_ecddc32b67.jpg "Mosque")
 
-Remembering some things that Tess and Francesca had told me in Serbia, I asked some guys working at a petrol station if there was camping nearby. I mentioned that I had cycled from Liverpool. They're Chelsea fans but said I could camp around the back of the petrol station! Behind the petrol station the ground was more suited for tent pegs than the real campsite I stayed in in Edirne! They also showed me the toilet. Such great hospitality.
+It was getting into evening and I was a little short of &Ccedil;orlu. Remembering some things that Tess and Francesca had told me in Serbia, I asked some guys working at a petrol station if there was camping nearby. I mentioned that I had cycled from Liverpool. They were Chelsea fans but said I could camp around the back of the petrol station! Behind the petrol station the ground was more suited for tent pegs than the real campsite I stayed in in Edirne last night! They also showed me the toilet. It had toilet paper. They even came to check everything was OK when their shift ended later on. Such fantastic hospitality.
 
 ![landscape](https://farm1.staticflickr.com/294/19460714585_eae649c0c7.jpg "Great petrol station guys")
 
-There is no shower here but then I didn't get much of a shower in Edirne because they ran out of water due to filling their pool.
-
-I finished the day a little short of &Ccedil;orlu. Tomorrow I'm going to head for Silivri.
+Tomorrow I will head for Silivri. And hopefully to a shower.
