Update blog text

--- a/blog/2015058.md
+++ b/blog/2015058.md
@@ -13,7 +13,7 @@ In the tourist area, two Brits and then a nice lady from Melbourne asked me if I
 
 ![landscape](https://farm4.staticflickr.com/3775/19274984869_23e384e30f.jpg "The Blue Mosque")
 
-I pushed my bike over towards the Hagia Sofia. I wasn't in a rush. I'd originally set with the intention of crossing the US and, whilst coming down from the Rockies had decided to follow Stevens across Europe too. I was finally here. I had cycled aross two continents and, as someone on Twitter pointed out, an entire religion. I had a content smile on my face. It has been fun following you Thomas. Enjoy the rest of your ride to Japan (1885-6). This is where _my_ journey ends.
+I pushed my bike over towards the Hagia Sofia. I wasn't in a rush. I'd originally set with the intention of crossing the US and, whilst coming down from the Rockies had decided to follow Stevens across Europe too. I was finally here. I had cycled aross two continents and, as someone on Twitter pointed out, an entire religion. I had a content smile on my face. It has been fun following you Thomas. Enjoy the rest of your ride to Japan (1885-6). This is where __my__ journey ends.
 
 ![landscape](https://farm1.staticflickr.com/551/19461070835_5bde10af3a.jpg "The Hagia Sofia")
 
