--- a/blog/2015055.md
+++ b/blog/2015055.md
@@ -4,7 +4,7 @@ Date:	2015-06-28T20:00:00+CEDT
 Distance:	63.2 miles
 ---
 
-Aside from briefly being woken by the musical call-to-prayer at 3.30am, I slept about 12 hours. I packed and said goodbye to the "campingplatz f&uuml;hrer". As her toilet blocks had no toilet paper I was now on the hunt for a toilet. Thankfully, the D100 has lots and lots of petrol stations on it so I managed to relieve myself.
+Aside from briefly being woken by the musical sounding muezzins at 3.30am, I slept about 12 hours. I packed and said goodbye to the "campingplatz f&uuml;hrer". As her toilet blocks had no toilet paper I was now on the hunt for a toilet. Thankfully, the D100 has lots and lots of petrol stations on it so I managed to relieve myself.
 
 I had around 200 km to go. The D100 was fairly quiet either because it was a Sunday morning or because of Ramadan.
 
