--- a/blog/2015057.md
+++ b/blog/2015057.md
@@ -4,45 +4,67 @@ Date:	2015-06-30T21:00:00+CEDT
 Distance:	58.3 miles
 ---
 
-In Stevens' day he said the morning calls to prayer woke him at 5am. They seem to be at 3.30am for me. I had breakfast on the rooftop breakfast bar.
+In Stevens' day he said the morning calls to prayer woke him at 5am. They seem to be at 3.30am for me. Given that I'm in the same place as Stevens on the same day of the year, I suspect it was actually &#x130;msak (a call two hours before dawn to awaken the faithful). I turned over and got a few more hours sleep. I had a quiet breakfast on the rooftop breakfast bar.
 
-![landscape](https://farm1.staticflickr.com/504/19434773056_2a7166621b.jpg "Silivri rooftops")
+![landscape](https://farm1.staticflickr.com/504/19434773056_2a7166621b.jpg "Silivri rooftops at breakfast")
+
+I headed up the hill and out of [Silivri](https://en.wikipedia.org/wiki/Silivri). This was my last day of riding. It was one I'd been dreading for weeks given all the scary stories from other long-distance cyclists about the danger of the roads into Istanbul. The [one website with advice for the route from Silivri into Istanbul](http://thenextchallenge.org/tips-for-cycling-into-istanbul/) basically boiled down to "Just stick as close to the south coast as possible and enjoy." I tried to follow that advice even though sometimes following the closer road to the sea meant a dead-end and back tracking. 
+
+I only had about 30 miles to go but, given that it is a major world city, I'd set aside the entire day. Having cycled through San Francisco, Chicago, Boston, London, Paris, Munich, Vienna, Budapest, Belgrade, and Sofia I knew I was lucky if I maintained a 6 mph pace in big cities. Istanbul was going to be slower as all the land traffic going from Europe to Asia was being funnelled into the crossing of the Bosphorus strait.
 
 ![landscape](https://farm1.staticflickr.com/483/19274718349_e5e510a0af.jpg "Coastline")
 
+Up on the top of the hill I could see a long way. My destination felt within reach.
+
 ![landscape](https://pbs.twimg.com/media/CIuvueiUEAUg0kk.jpg:large "View towards Istanbul")
 
-![landscape](https://pbs.twimg.com/media/CIu7aWEUYAAytJz.jpg:large "Slowly making my way along to seafront to Istanbul")
+![landscape](https://pbs.twimg.com/media/CIu7aWEUYAAytJz.jpg:large "Slowly making my way along the seafront to Istanbul")
 
-![landscape](https://pbs.twimg.com/media/CIvKTYVVEAAOFsN.jpg:large "Got to get around this bay")
+From the map I knew I'd have to hug the coastline around two big bays (B&uuml;y&uuml;k&ccedil;ekmece G&ouml;l&uuml; and K&uuml;&ccedil;&uuml;k&ccedil;ekmece G&ouml;l&uuml;) where all routes came together at pinch points to cross narrow isthmuses. Those were the bits I was worried about. I came around the headland and saw the huge bay at B&uuml;y&uuml;k&ccedil;ekmece G&ouml;l&uuml;. Down towards the isthmus I went. I found unfinished, seafront, roads that had had a great deal of effort put into and then seemingly left incomplete. It meant I had a nice quiet stretch.
+
+![landscape](https://pbs.twimg.com/media/CIvKTYVVEAAOFsN.jpg:large "I have to get around this bay")
 
 ![landscape](https://farm1.staticflickr.com/423/19465139751_2661a941e5.jpg "Unfinished seafront")
 
 ![landscape](https://pbs.twimg.com/media/CIvNVCOUMAAoFyi.jpg:large "Someone spent ages paving this with intricate designs then it has been half abandoned")
 
-![landscape](https://farm1.staticflickr.com/402/19454549962_ab1c4ddb71.jpg "A bike lane!")
+I made it across the isthmus avoiding much of the need to go on the D100 by using footpaths and getting off and pushing along a temporary 'footpath' that was on the D100 due to building works. At this point my map told me the D100 was called the "Londra Asfalti". It was pleasing to think I'd actually cycled all the way from its ostensible destination.
 
-Ice cream stop. I'm hugging the coast to avoid the much warned about D100. Getting there.
+I continued to hug the coast and found a lovely, blue, bike lane through a sea-side resort. I had an icecream stop to cool down. I rejoined the lovely bike lane and followed it at a leisurely pace for a few miles around the bay. I was making the most of it as I knew it was unlikely to go all the way to Istanbul. 
+
+![landscape](https://farm1.staticflickr.com/402/19454549962_ab1c4ddb71.jpg "A bike lane!")
 
 ![landscape](https://pbs.twimg.com/media/CIvaCjiVAAANm7V.jpg:large "More bike path on the way into Istanbul")
 
 ![landscape](https://farm4.staticflickr.com/3687/18838386884_115a4cb902.jpg "Turkish flag")
 
+At the headland I met more road works and a new port building under construction. I had to head up a steep hill to find a road. I was going through little sea-side villages on very quiet roads. It was very pleasant.
+
 ![landscape](https://farm1.staticflickr.com/301/19273361630_f37ab6a157.jpg "Allah")
 
-Just been asked for directions! Tried to explain that I'm not from around here.
+At one point up on the headland I got asked for directions! What is it about me that says I'm likely to know the way? My Yorkshire top? The loaded bike? I tried to explain that I wasn't from around here and they should probably ask one of the locals.
 
 ![landscape](https://farm1.staticflickr.com/452/19434871266_c56b3f12f0.jpg "Ships waiting")
 
 ![landscape](https://pbs.twimg.com/media/CIvmMToUEAAzPXs.jpg:large "Benches for conversation")
 
-A bit stuck. Back tracking.
+I was coming around to the second bay at K&uuml;&ccedil;&uuml;k&ccedil;ekmece G&ouml;l&uuml;. I stuck to the closest roads to the coast but there was a new housing estate and the road took me to the back of a port complex. I couldn't continue that way. I was a bit stuck. I back-tracked up a steep hill and took the next nearest road. As I came down the hill into the bay on &#x130;hlas Caddesi, I got dumped onto a busy multi-carriageway road. It became apparent that this was the front-entrance to the port and so clearly the wrong direction. I stopped at the side of the road next to a car that had accidentally come this way too. There was no way of turning around at this point when you realised your mistake. A security guard by the port gates tried to encourage me to go across the central reservation and cycle back along the other side. Given that would mean crossing up to six lanes of crazy traffic that wouldn't be expecting a person on a bicycle I shook my head lots and said I'd walk back along the side I'd come along. A few minutes later the car driver followed me down the narrow hard-shoulder against the flow of traffic too.
 
-Had my own seven minutes of terror.
+I was stuck back on &#x130;hlas Caddesi. Should I take a fly-over and use the busy dual carriageway? A couple of security guards who were standing around seemed to think this was my only way into Istanbul. Across the flyover I went for the start of my own [seven minutes of terror](http://www.jpl.nasa.gov/video/details.php?id=1090).
 
-A man in a white van stopped to say hello in Turkish. He wanted me to follow him. I think he is buying me a cola.
+I joined the dual carriageway. It looked suspiciously like a motorway even though it was marked as a normal road on OpenStreetMap and Google Maps. I didn't want to be on a busy motorway amongst speeding cars with virtually no hard shoulder. My knuckles were going white. Another road - Osmangazi Caddesi - joined from the right. I may have had right-of-way by normal road rules but Istanbul drivers didn't seem like the sort who would stop or slow down to let me across the slip lanes. I just stopped at the point where the two roads joined and waited for a suitable gap then peddaled like crazy to get across. The ordeal wasn't quite over. I had to leave the pitiful hard shoulder for several trucks and cars that seemed to have been parked in them. Each time I had to move out into the inside lane I gripped my handlebars ever tighter. 
+
+I took the road off onto Haramidere Ambarli Yolu which was a quieter (although still far from quiet) road. The traffic was slower here and I could breath a bit more. My heart rate started to come back down. 
+
+At the end of Haramidere Ambarli Yolu a man in a white van stopped to say hello in Turkish and tell me that the road I'd been on wasn't so safe! With the customery hand waving, I explained that I'd cycled all the way from Liverpool (most people have heard of Liverpool due to Liverpool F.C.). He was impressed with the route and told me to follow him up the road so he could buy me a cola and give advice on which roads to avoid. He didn't genuine and I supressed all the years of being told not to go with strangers. Actually, as it turned out, he followed __me__ up the road. He had decided to act as a shield to protect me from all the drivers behind. What a lovely white van man! 
 
 ![landscape](https://farm4.staticflickr.com/3732/19274811079_91c613f2ec.jpg "White van man")
+
+Along the road, my new friend waved me over and parked up his van. He ran off and came back with a can of cola for me to celebrate the end of my trip. He told me to stick to the small roads and wished me well as he ran off to a nearby building to continue his day's work. 
+
+We often think of strangers as dangerous people to be avoided and treated with suspicion. What the ride from San Francisco has shown me time and time again is that most people are friendly and kind. Although they don't know you and have entirely different politics and religions, they see the magnitude of the trip you've undertaken and want to help. Cycle touring has shown me some of the kindness humanity - all of humanity - is capable of. 
+
+I got back down to the coast and I found more bright blue bike lane through Avc&#x131;lar Sahil Park&#x131;. Around a third, smaller, bay I got squashed between the D100 and more road works. I followed the parks around the coast south of the airport and got a good view of the entrance to the Bosphorus a few miles away. Hello Istanbul!
 
 ![landscape](https://pbs.twimg.com/media/CIv_Q4nUMAI0PEe.jpg:large "The view across to Asia")
 
@@ -54,10 +76,14 @@ A man in a white van stopped to say hello in Turkish. He wanted me to follow him
 
 ![landscape](https://farm1.staticflickr.com/502/19273420470_4d0cc3a6b5.jpg "Passing by the Airport")
 
+I now had run out of coastal park and had to rejoin the roads. The land between the main road - Sahil Yolu - and the coast seemed to be private or military so I had to go along the partial footpath along the side of it. This part wasn't so enjoyable. The road turned into Kennedy Caddesi and I did get more bike lane even if it did tend to disappear into walls and building work. It seems the city don't think it necessary to provide alternatives for bicycles when they close a route. Istanbul cycling can be quite stressful when the bike lanes stop.
+ 
 ![landscape](https://farm1.staticflickr.com/324/18840407883_971b2dd697.jpg "End of a bike lane")
 
 ![landscape](https://pbs.twimg.com/media/CIxggfFVEAAm8yu.jpg:large "building works in Istanbul causing diversions that don't really allow room for loaded bikes.")
 
 ![landscape](https://farm4.staticflickr.com/3739/18838494864_2a568b2e77.jpg "Towards the Bosphorus")
 
-Istanbul cycling can be quite stressful when the bike lanes stop. I've checked into a hostel and had a shower now so feel more relaxed.
+The final stretch involved quite a bit of pushing along the footpaths when they existed rather than deal with the rush-hour traffic. I was slightly surprised at one junction when I saw a 10 year old boy cycling amonst the traffic. He was clearly more used to Istanbul drivers than I was.
+
+I got off Kennedy Caddesi and into the old town. The roads were narrow and bendy and I felt a lot more comfortable. I checked into a hostel. After around 7000 miles of cycling, I had reached my final destination. Time for a shower.
