Add link to a blog

--- a/blog/2015054.md
+++ b/blog/2015054.md
@@ -26,7 +26,7 @@ I found directions to the Grand &Ouml;m campsite which was a few kilometres east
 
 ![landscape](https://farm1.staticflickr.com/341/18838167274_f6c87959ef.jpg "Grand &Ouml;m campsite near Edirne")
 
-After being repeatedly warned that it was impossible to cycle into Istanbul without dying, over my 3G internet (thanks Tess!) I was glad to find [a website with advice for my route from Silivri into Istanbul](http://thenextchallenge.org/tips-for-cycling-into-istanbul/).
+After being repeatedly warned that it was impossible to cycle into Istanbul without dying, over my 3G internet (thanks Tess!) Some websites [suggested taking the D020](http://abikejourney.blogspot.co.uk/2010/08/cycling-into-istanbul-on-d020.html) from Edirne but I was stuck with Stevens' check list of places so had to go via Silivri. I was glad to find [a website with advice for my route from Silivri into Istanbul](http://thenextchallenge.org/tips-for-cycling-into-istanbul/).
 
 As always on my first day in a new country, I've had to work out what the drivers are like, what roads I can cycle on, and how to get food and water again.
 
