--- a/blog/2015057.md
+++ b/blog/2015057.md
@@ -8,7 +8,7 @@ In Stevens' day he said the morning calls to prayer woke him at 5am. They seem t
 
 ![landscape](https://farm1.staticflickr.com/504/19434773056_2a7166621b.jpg "Silivri rooftops at breakfast")
 
-I headed up the hill and out of [Silivri](https://en.wikipedia.org/wiki/Silivri). This was my last day of riding. It was one I'd been dreading for weeks given all the scary stories from other long-distance cyclists about the danger of the roads into Istanbul. The [one website with advice for the route from Silivri into Istanbul](http://thenextchallenge.org/tips-for-cycling-into-istanbul/) basically boiled down to "Just stick as close to the south coast as possible and enjoy." I tried to follow that advice even though sometimes following the closer road to the sea meant a dead-end and back tracking. 
+I headed up the hill and out of [Silivri](https://en.wikipedia.org/wiki/Silivri). This was my last day of riding. It was one I'd been dreading for weeks given all the scary stories from other long-distance cyclists about the danger of the roads into Istanbul. [One website with advice for the route from Silivri into Istanbul](http://thenextchallenge.org/tips-for-cycling-into-istanbul/) basically boiled down to "Just stick as close to the south coast as possible and enjoy." I tried to follow that advice even though sometimes following the closer road to the sea meant a dead-end and back tracking. 
 
 I only had about 30 miles to go but, given that it is a major world city, I'd set aside the entire day. Having cycled through San Francisco, Chicago, Boston, London, Paris, Munich, Vienna, Budapest, Belgrade, and Sofia I knew I was lucky if I maintained a 6 mph pace in big cities. Istanbul was going to be slower as all the land traffic going from Europe to Asia was being funnelled into the crossing of the Bosphorus strait.
 
