Add note about Brighton

--- a/blog/2015002.md
+++ b/blog/2015002.md
@@ -5,7 +5,7 @@ Distance:	28.0 miles
 Route:	tracks/2015-05-02.geojson
 ---
 
-I started out from New Brighton where I dipped my wheel in the sea and my dad waved me off. 
+I started out from New Brighton where I dipped my wheel in the sea and my dad waved me off. All being well, I'd arrive in Brighton just over a week later.
 
 ![landscape](https://farm1.staticflickr.com/497/19450458225_df1329964a.jpg "Dipping my wheel in the Irish Sea at New Brighton")
 
