Add more pictures

--- a/blog/0069.md
+++ b/blog/0069.md
@@ -7,6 +7,8 @@ Route:	tracks/2014-06-16.geojson
 
 ![landscape](https://farm6.staticflickr.com/5591/14360261449_376ce1a630.jpg "The place where the road surface threw me from my bike")
 
-![landscape](https://farm3.staticflickr.com/2923/14360262219_252ecb3709.jpg "Pell on the bridge over the Missouri")
+![portrait](https://farm4.staticflickr.com/3882/14546869555_5e43d5aa6d.jpg "Crossing from Nebraska to Iowa")
+
+![portrait](https://farm3.staticflickr.com/2923/14360262219_252ecb3709.jpg "Pell on the bridge over the Missouri")
 
 ![landscape](https://farm4.staticflickr.com/3840/14545933072_0303509828.jpg "Omaha from Iowa")
