--- a/blog/0070.md
+++ b/blog/0070.md
@@ -5,3 +5,8 @@ Distance:	23.2 miles
 Route:	tracks/2014-06-17.geojson
 ---
 
+![landscape](https://farm3.staticflickr.com/2911/14360284158_5ec9e537a5.jpg "Emigrant sculpture in Omaha")
+
+![landscape](https://farm4.staticflickr.com/3926/14566984243_b548686bc4.jpg "Emigrant sculpture")
+
+![portrait](https://farm6.staticflickr.com/5583/14546866815_810339b0d3.jpg "Omaha bike shop")
